--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Time‑Wallet</title>
-<script type="module" src="/src/index.ts"></script>
-<link rel="stylesheet" href="/src/styles/tailwind.css" />
-</head>
-<body class="bg-black text-lemon-primary font-sans flex items-center justify-center min-h-screen">
-<time-wallet-dashboard></time-wallet-dashboard>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Time Wallet</title>
+  </head>
+  <body class="m-0 bg-black">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
