--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,6 @@
     <div id="root"></div>
 
     <!-- ⚠️ IMPORTANTE: ruta relativa (sin / inicial) -->
-    <script type="module" src="./src/index.ts"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
