--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time-Wallet mini-app</title>
 
-    <!-- icono opcional (usa el tuyo o quítalo) -->
+    <!-- Favicon opcional -->
     <link rel="icon" href="/nft/seed.png" />
   </head>
 
-  <body class="m-0 p-0">
+  <body class="m-0 p-0 bg-black">
     <!-- React montará la UI aquí -->
-    <div id="root"></div>
+    <div id="app"></div>
 
-    <!-- ⚠️ IMPORTANTE: ruta relativa (sin / inicial) -->
+    <!-- Vite bundle -->
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
+
