--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,11 @@
 
   <body class="m-0 p-0 bg-black">
     <!-- React montará la UI aquí -->
-    <div id="app"></div>
+    <div id="root"></div>          <!-- id cambiado a root -->
 
-    <!-- Vite bundle -->
-    <script type="module" src="/src/index.tsx"></script>
+    <!-- Vite bundle (apunta a main.tsx) -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
 
